--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
-	color: #434455;
-	background-color: #ffffff;
-
+  color: #434455;
+  background-color: #ffffff;
 }
 ul {
   list-style-type: none;
@@ -17,48 +16,40 @@ h3 {
 p {
 }
 .logo {
-  font-family: "Raleway" ;
-  font-size: 18px;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
-  line-height: 1.2;
+  font-size: 18px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
-  text-align: left;
-  text-decoration: none;
+  text-transform: uppercase;
   color: #4d5ae5;
 }
 .logo span {
   color: #2e2f42;
 }
-.body-medium {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: left;
-}
 .body-medium a {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.02em;
   color: #2e2f42;
-  text-decoration: none;
 }
 .body-medium a:hover {
+  color: #404bbf;
 }
 .body-medium a:focus {
   text-decoration: underline;
   color: #404bbf;
 }
-.contacts {
-  font-family: "Roboto", sans-serif;
+.contacts a{
   font-size: 16px;
-  font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: left;
-}
-.contacts a {
   color: #434455;
-  text-decoration: none;
 }
 .contacts a:hover {
+  color: #404bbf;
+}
+.contacts a:focus {
   color: #404bbf;
 }
 .Dark-bg {
@@ -72,11 +63,11 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
 }
 .button {
   background-color: #4d5ae5;
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 500;
@@ -112,7 +103,7 @@ p {
   background-color: #2e2f42;
 }
 .footer p {
-	color: #f4f4fd;
+  color: #f4f4fd;
 }
 .footer-logo {
   font-family: "Raleway";
@@ -122,8 +113,8 @@ p {
   letter-spacing: 0.03em;
   text-align: left;
   text-decoration: none;
-	color: #f4f4fd
+  color: #f4f4fd;
 }
 .footer-logo span {
-	color: #4d5ae5;
+  color: #4d5ae5;
 }
