--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ p {
   font-size: 16px;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  line-height: 1.5;
 }
 .body-medium a:hover {
   color: #404bbf;
@@ -41,6 +42,7 @@ p {
   color: #404bbf;
 }
 .contacts a {
+  font-style: normal;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -60,20 +62,25 @@ p {
   font-family: "Roboto", sans-serif;
   font-size: 56px;
   font-weight: 700;
-  line-height: 1.5;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
 }
 .button {
+  font-family: "Roboto", sans-serif;
   background-color: #4d5ae5;
   color: #ffffff;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 500;
   cursor: pointer;
+  letter-spacing: 0.04em;
 }
 .button:hover {
+  background-color: #404bbf;
+}
+.button:focus {
   background-color: #404bbf;
 }
 .Features-list {
