--- a/css/style.css
+++ b/css/style.css
@@ -25,17 +25,17 @@ h3 {
 .logo span {
   color: #2e2f42;
 }
-.list { 
+.list-link { 
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.02em;
   color: #434455;
   line-height: 1.5;
 }
-.listt:hover {
+.list-link:hover {
   color: #404bbf;
 }
-.list:focus {
+.list-link:focus {
   text-decoration: underline;
   color: #404bbf;
 }
