--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ h3 {
   font-size: 16px;
   letter-spacing: 0.02em;
   color: #434455;
+  color: #2e2f42;
   line-height: 1.5;
 }
 .list-link:hover {
