--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,18 @@ h3 {
 .logo span {
   color: #2e2f42;
 }
-.list-link { 
+.list {
   font-weight: 500;
   font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.list-link {
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  color: #2e2f42;
-  line-height: 1.5;
 }
 .list-link:hover {
   color: #404bbf;
