--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,14 @@ h3 {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: #434455;
 }
-/* .list-link {
+.list-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
-} */
+  color: #2e2f42;
+}
 .list-link:hover {
   color: #404bbf;
 }
