--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,6 @@ h3 {
 .logo span {
   color: #2e2f42;
 }
-.list {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
 .list-link {
   font-size: 16px;
   line-height: 1.5;
@@ -45,17 +38,17 @@ h3 {
   text-decoration: underline;
   color: #404bbf;
 }
-.contacts {
+.contacts-link {
   font-style: normal;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
-.contacts a:hover {
+.contacts-link a:hover {
   color: #404bbf;
 }
-.contacts a:focus {
+.contacts-link:focus {
   color: #404bbf;
 }
 .dark-bg {
