--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ h3 {
   text-decoration: underline;
   color: #404bbf;
 }
+.contacts {
+  font-style: normal;
+}
 .contacts-link {
   font-style: normal;
   font-size: 16px;
@@ -45,7 +48,7 @@ h3 {
   letter-spacing: 0.02em;
   color: #434455;
 }
-.contacts-link a:hover {
+.contacts-link:hover {
   color: #404bbf;
 }
 .contacts-link:focus {
