--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ h3 {
   background-color: #2e2f42;
   text-align: center;
 }
-.header-1 {
+.title-h1 {
   font-family: "Roboto", sans-serif;
   font-size: 56px;
   font-weight: 700;
