--- a/css/style.css
+++ b/css/style.css
@@ -105,10 +105,9 @@ h3 {
 }
 .team-title {
   font-family: "Roboto", sans-serif;
-  line-height: 1.1;
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.1;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
@@ -116,6 +115,14 @@ h3 {
 }
 .workers {
   background-color: #ffffff;
+}
+.title-names {
+  color: #2e2f42;
+}
+.position {
+  font-size: 16px; 
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .list-portfolio {
   text-align: left;
