--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,10 @@ h3 {
   text-align: center;
 }
 .team-title {
-  font-family: "Roboto", sans-serif;
+
+}
+.workers > p{
+    font-family: "Roboto", sans-serif;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
@@ -112,8 +115,6 @@ h3 {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
-}
-.workers {
   background-color: #ffffff;
 }
 .title-names {
