--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ h3 {
 .team-title {
 
 }
-.workers > p{
+.workers > p,h3{
     font-family: "Roboto", sans-serif;
   font-size: 36px;
   font-weight: 700;
