--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,10 @@ h3 {
   color: #2e2f42;
 }
 .position {
-  font-size: 16px; 
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #434455;
 }
 .list-portfolio {
   text-align: left;
