--- a/css/style.css
+++ b/css/style.css
@@ -135,11 +135,11 @@ h3 {
 .footer p {
   color: #f4f4fd;
 }
-.footer-logo {
+.footer-logo-cont {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.7;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: left;
   text-decoration: none;
@@ -149,6 +149,11 @@ h3 {
 }
 .footer-logo span {
   color: #f4f4fd;
+}
+.footer-logo {
+  color: #f4f4fd;
+}
+.footer-text {
   line-height: 1.5;
-  letter-spacing: 0.02em
+  letter-spacing: 0.02em;
 }
